--- a/Journal-2018.html
+++ b/Journal-2018.html
@@ -17,11 +17,39 @@ footer {clear:both;}
 <li>1</li>
 <li>2</li>
 <li>3</li>
+</ul>
 </nav>
 </aside>
-<article>
-<header>Header</header>
-<p>My test</p>
+<article data-origin-date="04/26/2018">
+<header>iPhone</header>
+<p>
+The battery in my trusty, rusty Windows Phone finally decided it had had enough and went belly up. 
+It was about time. It was out of service, running Windows 8. Besides, nobody uses a Windows Phone anymore.
+</p>
+<p>
+In its place I was issued my first iPhone
+<a href="https://www.amazon.com/Apple-iPhone-Silver-16GB-Verizon/dp/B06WW11CV4">Apple iPhone 6 Model MG5X2LL/A</a>
+
+
+</p>
+
+<p>
+
+</p>
+<p>
+
+<img src="https://photos.app.goo.gl/Sc73SnuaNtqbGtZi1" alt="Smiley face" height="42" width="42"/>
+<a href="https://photos.app.goo.gl/Sc73SnuaNtqbGtZi1">Google photo test</a>
+</p>
+<p>
+
+</p>
+<p>
+
+</p>
+<p>
+The software on the PC looks just like it did 5 years ago!
+</p>
 </article>
 </body>
 </html>
