--- a/Journal-2018.html
+++ b/Journal-2018.html
@@ -20,6 +20,36 @@ footer {clear:both;}
 </ul>
 </nav>
 </aside>
+<article data-origin-date="04/28/2018">
+<header>Comics</header>
+<p>
+My literary career began with comic books. I learned to read from Superman, Batman and the Amazing Spiderman, along with Aquaman, Wonderwoman, The Flash and, especially, The Joker. My artistic career started long before, of course. Like any child, I loved to draw and color. I remember once my mother bringing me a Casper the Friendly Ghost Coloring Book from the grocery store when I was ill. My first paint set came from <a href="https://wild-bohemian.com/hipshops.htm">The Psychedelic Shop on Haight Ashbury in San Francisco</a>. 
+</p>
+<p>
+There is an <a href="https://en.wikipedia.org/wiki/Alex_Ross">Alex Ross</a> exhibition in town.
+
+
+
+</p>
+
+<p>
+
+</p>
+<p>
+
+<img src="https://photos.app.goo.gl/Sc73SnuaNtqbGtZi1" alt="Smiley face" height="42" width="42"/>
+<a href="https://photos.app.goo.gl/Sc73SnuaNtqbGtZi1">Google photo test</a>
+</p>
+<p>
+
+</p>
+<p>
+
+</p>
+<p>
+The software on the PC looks just like it did 5 years ago!
+</p>
+</article>
 <article data-origin-date="04/26/2018">
 <header>iPhone</header>
 <p>
