--- a/Journal-2018.html
+++ b/Journal-2018.html
@@ -29,12 +29,9 @@ It was about time. It was out of service, running Windows 8. Besides, nobody use
 <p>
 In its place I was issued my first iPhone
 <a href="https://www.amazon.com/Apple-iPhone-Silver-16GB-Verizon/dp/B06WW11CV4">Apple iPhone 6 Model MG5X2LL/A</a>
-
-
 </p>
-
 <p>
-
+I miss the navigation buttons. It seems to me like there is a lot of wasted real estate on the phone next to the Home button.
 </p>
 <p>
 
