--- a/Iteration-1.2.html
+++ b/Iteration-1.2.html
@@ -7,7 +7,7 @@
 	<body>
 		<p>
 		
-			<a href="http://xprogramming.com/Practices/PracSimplest.html target="blank>
+			<a href="http://xprogramming.com/Practices/PracSimplest.html" target="_blank">
 				"Simplicity, simplicity, simplicity"
 			</a><br/>
 				-- Henry David Thoreau
