--- a/Iteration-1.3.html
+++ b/Iteration-1.3.html
@@ -21,9 +21,10 @@
 		</p>
 		<p>
 			HTML is comprised of tags, or elements, that determine the behavior and rendering
-			of the page. This is the Markup Language part of the acronym (Hypertext Markup Language).
-			You can see that the anchor tag is created by wrapping the markup in &lt;&gt;. The markup
-			itself consists of identifying the element (a) and attributes, in this case href (hypertext reference),
+			of the page. This is the <i>Markup Language</i> part of the HTML acronym, which 
+			stands for(Hypertext Markup Language).
+			You can see that the anchor tag is created by wrapping the markup between a less than (&lt;) and a greater than (&gt;) symbol. The markup
+			itself consists of identifying the <b>element</b> "a" and its <b>attributes</b>, in this case href (hypertext reference),
 			which indicates where the link should navigate to.
 			
 			The link on the Anchor tag opens W3C Schools, 
